# LidGuard

./: README.md  build_backend.py  config.py  lid_guard.py  lid_guard_mac.py  process_watcher.py  pyproject.toml
.github/workflows/: ci.yml
src/lidguard/: config.py  doctor.py  platform_macos.py  service.py
tests/: test_build_backend.py  test_config.py  test_macos.py  test_service.py
